# AWS_Lab03

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  main.py  pyproject.toml  settings.py
src/scripts/: download_artifacts.py
