[project]
name = "sentiment-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.1",
    "clean-text>=0.6.0",
    "cloudpickle>=3.1.1",
    "fastapi>=0.115.12",
    "joblib>=1.4.2",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.6",
    "torch==2.6.0",
    "transformers==4.36.0",
    "uvicorn>=0.34.2",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
